--- a/about.html
+++ b/about.html
@@ -50,34 +50,37 @@
         <div class="about-info">
             <img src="img/portrait.jpg" alt="Samuel" class="bio-image">
             <div class="bio">
-                <h3 class="text-secondary">BIO</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus iure doloremque quos magni natus eaque
-                    nihil quae quis, cupiditate laudantium! Officiis ea debitis laborum culpa, animi nesciunt tempore natus
-                    sunt.
+                <h3 class="text-secondary">Objective</h3>
+                <p>As a web and cross platform mobile app developer, I constantly apply myself to stay abreast with modern web
+                    development frameworks, the latest syntax and technology trends. Confident to take up any task and deliver
+                    within projected time, my skills are applied from the development to deployment of an application, the
+                    planning cycle, application scaling, best practices and cloud development-operations/architecture. I
+                    bring focus and discipline in my projects, I show professionalism in design and execution to deliver
+                    appropriately.
                 </p>
             </div>
             <div class="job job-1">
                 <h3>Lodestar Academy</h3>
                 <h6>Full Stack Developer</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, officiis quod, incidunt unde repudiandae
-                    reprehenderit vel magnam sit omnis ex expedita? Minima harum repellendus repudiandae accusamus in a dolore
-                    non.
+                <p>As a full stack web developer at Lodestar academy, i worked alone to develop the web application that service
+                    all the online needs of the school. The portals' remote web server was designed with php laravel framework,
+                    it uses MySQL database to store data, and bootstrap library for the front end styling.
                 </p>
             </div>
             <div class="job job-2">
                 <h3>Devtrain Global</h3>
                 <h6>Front End Developer</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, officiis quod, incidunt unde repudiandae
-                    reprehenderit vel magnam sit omnis ex expedita? Minima harum repellendus repudiandae accusamus in a dolore
-                    non.
+                <p>Development Train is a non-profit organisation that caters to a host humanitarian volunteer programs. I designed
+                    a landing page for the company, using HTML, CSS and Materialize. I used google fonts to give the user
+                    a heuristic user experience.
                 </p>
             </div>
             <div class="job job-3">
                 <h3>Air Quality</h3>
-                <h6>Mobile App</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, officiis quod, incidunt unde repudiandae
-                    reprehenderit vel magnam sit omnis ex expedita? Minima harum repellendus repudiandae accusamus in a dolore
-                    non.
+                <h6>Mobile App Developer</h6>
+                <p>The air quality mobile app was developed with react-native framework, and styled with googles material-ui
+                    library. I did not need to design a server for this application, because all the data that serviced the
+                    application was gotten from a remote API, which I got from the client.
                 </p>
             </div>
         </div>
