--- a/work.html
+++ b/work.html
@@ -50,13 +50,26 @@
         <div class="projects">
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/1.jpg" alt="Project">
+                    <img src="img/logo.png" alt="Project">
                 </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                <a href="https://lodestar.netlify.com/" class="btn-light">
+                    <i class="fas fa-eye"></i> Lodestar Academy
                 </a>
 
-                <a href="#" class="btn-dark">
+                <a href="https://github.com/Sammy0807/lodestar" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+
+            <div class="item">
+                <a href="#!">
+                    <img src="img/DevTrain.jpg" alt="Project">
+                </a>
+                <a href="http://devtrain.com.ng/" class="btn-light">
+                    <i class="fas fa-eye"></i> DevTrain
+                </a>
+
+                <a href="https://github.com/Sammy0807/devtrain" class="btn-dark">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
@@ -66,23 +79,10 @@
                     <img src="img/projects/1.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
+                    <i class="fas fa-eye"></i> Air Quality
                 </a>
 
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github"></i> Github
-                </a>
-            </div>
-
-            <div class="item">
-                <a href="#!">
-                    <img src="img/projects/1.jpg" alt="Project">
-                </a>
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye"></i> Project
-                </a>
-
-                <a href="#" class="btn-dark">
+                <a href="https://github.com/Sammy0807/evothings-examples" class="btn-dark">
                     <i class="fab fa-github"></i> Github
                 </a>
             </div>
