--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
             <span class="text-secondary">Work</span>
         </h1>
         <h2 class="sm-heading">
-            Check out some of my projects...
+            Here are some of my projects...
         </h2>
         <div class="projects">
             <div class="item">
@@ -76,7 +76,7 @@
 
             <div class="item">
                 <a href="#!">
-                    <img src="img/projects/1.jpg" alt="Project">
+                    <img src="img/air quality.jpg" alt="Project">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> Air Quality
