--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             Web Developer, Programmer, Designer & Entrepreneur.
         </h2>
         <div class="icons">
-            <a href="#!">
+            <a href="https://twitter.com/E50_">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://www.facebook.com/egwurube.samuel">
                 <i class="fab fa-facebook fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://www.linkedin.com/in/samuel-egwurube-133738b9/">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
-            <a href="#!">
+            <a href="https://github.com/sammy0807/">
                 <i class="fab fa-github fa-2x"></i>
             </a>
         </div>
