--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     <title>About Samuel</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+        <link rel="shortcut icon" type="image/png" href="img/portrait.jpg">
+        <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
