--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <li ><img class="img" src="/img/pp2.jpeg"></li>
                 <li class="small">
                     <p> A team player and a web developer, passionate to use developer’s frontend 	
-                    and backend skills to build great web/software applications and creating great user experience.</p> 
-                    <p>In striving to increase knowledge and contribute values, I have achieve a master degree in computer science and gain two years working experience in assisting content editors, developers and project managers/coordinators with maintenance and technical development of the university’s multiple websites at texas southern university. I have also worked individually on multiple projects, to deepen my understanding on how things work, build up resilience to turn challenges into success and I strongly believe I can compete at any levels.</p>
-                    <p>I consider myself a forever student always eager to strenghten my carreer in software engineering by staying in tune with latest technology trend through hardwork and continued coursework.</p>
-                    <p>I believe that mindfulness plus great work ethics will always lead to success. A quality that was self-thought through mind exercising meditation and long distance racing that i have embranced as hobby.</p>
+                    and backend skills to build great web/mobile applications and creating great user experience.</p> 
+                    <p>In striving to increase knowledge and contribute value, I have achieved a Masters degree in computer science and gained two years working experience in assisting content editors, developers and project managers/coordinators with maintenance and technical development of the university’s multiple websites at Texas Southern University. I have personally worked on multiple projects, to deepen my understanding on how things work, build up resilience to turn challenges into success and I strongly believe I can compete at any level.</p>
+                    <p>I consider myself forever a student, I'm always eager to strenghten my carreer in software engineering by staying in tune with the latest technology trends through hardwork and continued coursework.</p>
+                    <p>I believe that mindfulness plus great work ethics will always lead to success. A quality that was self-thought through mind exercising meditation and long distance jogging that i have embranced as hobby.</p>
                     <p> I am currently seeking a job and interested in a challenge. Reach out to me on <a href="mailto:" class="links">sami.egwu90@gmail.com</a></p>
                 </li>
             </ul>
@@ -68,7 +68,7 @@
                     <span class="strong">Project Link:</span><a class="links" href="https://authappnode.azurewebsites.net/" target="_blank"> https://authappnode.azurewebsites.net/</a>
                     <p>The sole aim of this app is for user authentication and login, it was developed on an expressjs and node server. The server's data
                         is persisted with a mongoDB database which is hosted separately. The app follows a model view control (MVC)
-                        architecture which is why i took the option of presenting the view with EJS and bootstrap for an easy and pleasant User interface.</p>
+                        architecture which is why I took the option of presenting the view with EJS and bootstrap for an easy and pleasant User Experience.</p>
                 </li>
                 <li>
                     <i class="fab fa-laravel fa-4x"></i>
@@ -76,13 +76,13 @@
                     <span class="strong">Project Link:</span><a class="links" href="https://blogappz.azurewebsites.net" target="_blank"> https://blogappz.azurewebsites.net</a>
                     <p>This project was created to show understanding and usefulness of using REST with PHP's Laravel 5 framework.
                         REST(Representational State Transfer) is a reliable and conventional pattern 
-                        in which this blog App project http routes wrere organised for efficiency and readabilty. 
+                        in which this blog App http routes were organised for efficiency and readabilty. 
                         The RESTful route as used in this project was mapped between http routes and 
                         CRUD(Create, Read, Update and Destroy) functionality. Furthermore, 
                         different RESTful route was implemented in this project 
                         which means that you can be able to read all blogs, add new, create, show, edit, update and delete. 
                         This project is also built with bootstrap UI css framework.
-                        The app was deployed on Azure's cloud platform and the data persisted with MySQL database.
+                        The app is hosted on Azure's cloud platform and the data persisted with MySQL database.
                     </p>
                 </li>
     
@@ -252,9 +252,9 @@
             <p>Design by Samuel Egwurube</p>
             <p>Life is for the living</p>
             <ul>
-                <li> <a href="#"> <i class="fab fa-facebook-square"></i> </a> </li>
-                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li> <a href="https://www.facebook.com/egwurube.samuel"> <i class="fab fa-facebook-square"></i> </a> </li>
+                <li><a href="https://twitter.com/E50_"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/samuel-egwurube/"><i class="fab fa-linkedin-square" aria-hidden="true"></i></a></li>
             </ul>
         </footer>
         <script src="js/scrollreveal.min.js"></script>
