--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             <ul class="grid">
                 <li>
                     <i class="fab fa-react fa-4x"></i>
-                    <h4>Lyrics Finder App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://agile-sands-70987.herokuapp.com/" target="_blank"> https://agile-sands-70987.herokuapp.com/</a>
-                    <p>This app project was built with Reactjs, and Musixmatch API.
-                        The app allows you to search for songs and their lyrics, which returns 30% of the lyrics (because its a free API).
+                    <h4>Developer Finder App</h4>
+                    <span class="strong">Project Link:</span><a class="links" href="https://hidden-bastion-92840.herokuapp.com/" target="_blank">Find a Developer</a>
+                    <p>This app project was built with Reactjs, and Github API.
+                        The app allows you to search for Developers and their Repository of Code on Github.
                         I employed my knowledge of react-router and react-bootstrap to present an improved user exprience. It might take 
                         longer time to load because it is hosted on heroku</p>
                 </li>
