--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
             <ul class="grid">
                 <li>
                     <i class="fab fa-react fa-4x"></i>
-                    <h4>Developer Finder App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://hidden-bastion-92840.herokuapp.com/" target="_blank">Find a Developer</a>
-                    <p>This app project was built with Reactjs, and Github API.
-                        The app allows you to search for Developers and their Repository of Code on Github.
-                        I employed my knowledge of react-router and react-bootstrap to present an improved user exprience. It might take 
-                        longer time to load because it is hosted on heroku</p>
+                    <h4>Contact Manager</h4>
+                    <span class="strong">Project Link:</span><a class="links" href="https://desolate-woodland-21730.herokuapp.com/" target="_blank"> Contact Manager</a>
+                    <p>This is a fullstack application built in a node environment with express for the routing and mongo atlas for the database. The front end is
+                    developed with Reactjs. Functionalities include Authentication before login in, then you can perform CRUD operations in the application
+                    by adding contacts, editing them or deleting them. Your location/firewall might delay or reject your access to the Application's cluster.</p>
                 </li>
                 <li>
                     <i class="fab fa-node fa-4x"></i>
