--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <hr class="page-hr">
             <ul class="grid">
                 <li ><img class="img" src="/img/pp2.jpeg"></li>
-                <li class="small" style="text-align: justify">
+                <li class="small" style="text-align: justify;  text-justify: inter-word;">
                     <p> A team player and a web developer, passionate to use developer’s frontend 	
                     and backend skills to build great web/mobile applications and creating great user experience.</p> 
                     <p>In striving to increase knowledge and contribute value, I have achieved a Masters degree in computer science and gained two years working experience in assisting content editors, developers and project managers/coordinators with maintenance and technical development of the university’s multiple websites at Texas Southern University. I have personally worked on multiple projects, to deepen my understanding on how things work, build up resilience to turn challenges into success and I strongly believe I can compete at any level.</p>
