--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <hr class="page-hr">
             <ul class="grid">
                 <li ><img class="img" src="/img/pp2.jpeg"></li>
-                <li align="justify" class="small" style="text-align: justify;  text-justify: inter-word;">
-                    <p> A team player and a web developer, passionate to use developer’s frontend 	
-                    and backend skills to build great web/mobile applications and creating great user experience.</p> 
+                <li align="left" class="small" style="text-align: left;  text-justify: inter-word;">
+                    <p> A team player and a web developer, passionate to use frontend 	
+                    and Nodejs skills to build great web/mobile applications in creating great user experience.</p> 
                     <p>In striving to increase knowledge and contribute value, I have achieved a Masters degree in computer science and gained two years working experience in assisting content editors, developers and project managers/coordinators with maintenance and technical development of the university’s multiple websites at Texas Southern University. I have personally worked on multiple projects, to deepen my understanding on how things work, build up resilience to turn challenges into success and I strongly believe I can compete at any level.</p>
                     <p>I consider myself forever a student, I'm always eager to strenghten my carreer in software engineering by staying in tune with the latest technology trends through hardwork and continued coursework.</p>
-                    <p>I believe that mindfulness plus great work ethics will always lead to success. A quality that was self-thought through mind exercising meditation and long distance jogging that i have embranced as hobby.</p>
+                    <p>I believe that mindfulness plus great work ethics will always lead to success. A quality that was self-taught through mind exercising meditation and long distance jogging that i have embranced as hobby.</p>
                     <p> I am currently seeking a job and interested in a challenge. Reach out to me on <a href="mailto:" class="links">sami.egwu90@gmail.com</a></p>
                 </li>
             </ul>
