--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
                     by adding contacts, editing them or deleting them. Your location/firewall might delay or reject your access to the Application's cluster.</p>
                 </li>
                 <li>
-                    <i class="fab fa-node fa-4x"></i>
-                    <h4>Node and Express App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://authappnode.azurewebsites.net/" target="_blank"> https://authappnode.azurewebsites.net/</a>
-                    <p>The sole aim of this app is for user authentication and login, it was developed on an expressjs and node server. The server's data
-                        is persisted with a mongoDB database which is hosted separately. The app follows a model view control (MVC)
-                        architecture which is why I took the option of presenting the view with EJS and bootstrap for an easy and pleasant User Experience.</p>
+                    <i class="fab fa-react fa-4x"></i>
+                    <i class="fab fa-firebase fa-4x"></i>
+                    <h4>React and Firebase</h4>
+                    <span class="strong">Project Link:</span><a class="links" href="https://crwn-live-react-sam.herokuapp.com/" target="_blank"> Link to Project</a>
+                    <p>This project takes employs my skills in react js and the infamous application level state management tool redux on the front end. The application is an
+                    ecommerce web app that allows the user to login with google or through email and password, selection of different items, check out and eventually payment
+                    through stripes payment api</p>
                 </li>
                 <li>
                     <i class="fab fa-laravel fa-4x"></i>
