--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     through stripes payment api</p>
                 </li>
                 <li>
-                    <i class="fab fa-javaScript fa-4x"></i>
+                    <i class="fab fa-javascript fa-4x"></i>
                     <h4>Blog App</h4>
                     <span class="strong">Project Link:</span><a class="links" href="https://blogappz.azurewebsites.net" target="_blank"> https://blogappz.azurewebsites.net</a>
                     <p>This project was created to show understanding and usefulness of using REST with PHP's Laravel 5 framework.
