--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 </li>
                 <li>
                     <i class="fab fa-react fa-4x"></i>
-                    <i class="fab fa-firebase fa-4x"></i>
                     <h4>React and Firebase</h4>
                     <span class="strong">Project Link:</span><a class="links" href="https://crwn-live-react-sam.herokuapp.com/" target="_blank"> Link to Project</a>
                     <p>This project takes employs my skills in react js and the infamous application level state management tool redux on the front end. The application is an
@@ -72,17 +71,14 @@
                 </li>
                 <li>
                     <i class="fab fa-javascript fa-4x"></i>
-                    <h4>Blog App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://blogappz.azurewebsites.net" target="_blank"> https://blogappz.azurewebsites.net</a>
-                    <p>This project was created to show understanding and usefulness of using REST with PHP's Laravel 5 framework.
-                        REST(Representational State Transfer) is a reliable and conventional pattern 
-                        in which this blog App http routes were organised for efficiency and readabilty. 
-                        The RESTful route as used in this project was mapped between http routes and 
-                        CRUD(Create, Read, Update and Destroy) functionality. Furthermore, 
-                        different RESTful route was implemented in this project 
-                        which means that you can be able to read all blogs, add new, create, show, edit, update and delete. 
-                        This project is also built with bootstrap UI css framework.
-                        The app is hosted on Azure's cloud platform and the data persisted with MySQL database.
+                    <h4>Twitter Clone</h4>
+                    <span class="strong">Project Link:</span><a class="links" href="https://comprehensive-js-app.herokuapp.com/" target="_blank"> Open The Application Here.</a>
+                    <p>
+                        This application was developed without the use of any framework, it was built off of pure javascript using an MVC pattern to
+                        organize the files. The server was built on Nodejs and expressjs for routing, the database is an active mongodb cluster. The front
+                        end used twitter bootstrap library for styling along with CSS and HTML. Features of the application include login with authentication,
+                        sending friend requests to other users, posting of tweets, commenting on friends tweets, blocking other users, chatting with other active users.
+                        This application was really fun to make and my motivation was to implement all the features in modern social media platforms on my application.
                     </p>
                 </li>
     
