--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     through stripes payment api</p>
                 </li>
                 <li>
-                    <i class="fab fa-javascript fa-4x"></i>
+                    <i class="fab fa-js fa-4x"></i>
                     <h4>Twitter Clone</h4>
                     <span class="strong">Project Link:</span><a class="links" href="https://comprehensive-js-app.herokuapp.com/" target="_blank"> Open The Application Here.</a>
                     <p>
