--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                                 applications and I hope you enjoy it for visiting my page.
                             </p>
                         </li>
+                
+                    <li>
+                      <i class="fab fa-mobile fa-4x"></i>
+                        <h4>Mobile Application Projects on Expo</h4>
+                        <p>
+                        <ul>
+                            <li>Driver Assistance App: <a href="https://expo.io/@island_trips/projects/drivingapp" >Link</a></li>
+                            <li>Graph Manager App: <a href="https://expo.io/@island_trips/projects/velocity" >Link</a></li>
+                            <li>Plant Management App: <a href="https://expo.io/@island_trips/projects/plantprojectmanager" >Link</a></li>
+                            <li>Smart Home App: <a href="https://expo.io/@island_trips/projects/smarthome" >Link</a></li>
+                            <li></li>
+                        </ul>
+                        </p>
+
+                    </li>
             </ul>
         </section>
     
