--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                         <h4>Mobile Application Projects on Expo</h4>
                         <p>
                         <ul>
-                            <li>Driver Assistance App: <a class="links" href="https://expo.io/@island_trips/projects/drivingapp" >Link</a></li>
-                            <li>Graph Manager App: <a class="links" href="https://expo.io/@island_trips/projects/velocity" >Link</a></li>
-                            <li>Plant Management App: <a class="links" href="https://expo.io/@island_trips/projects/plantprojectmanager" >Link</a></li>
-                            <li>Smart Home App: <a class="links" href="https://expo.io/@island_trips/projects/smarthome" >Link</a></li>
+                            <li>Driver Assistance App: <a targget="_blank" style="color: black" href="https://expo.io/@island_trips/projects/drivingapp" >Link</a></li>
+                            <li>Graph Manager App: <a targget="_blank" style="color: black" href="https://expo.io/@island_trips/projects/velocity" >Link</a></li>
+                            <li>Plant Management App: <a targget="_blank" style="color: black" href="https://expo.io/@island_trips/projects/plantprojectmanager" >Link</a></li>
+                            <li>Smart Home App: <a targget="_blank" style="color: black" href="https://expo.io/@island_trips/projects/smarthome" >Link</a></li>
                             
                         </ul>
                         </p>
