--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </li>
                 
                     <li>
-                      <i class="fab fa-mobile fa-4x"></i>
+                      <i class="fa fa-mobile fa-4x"></i>
                         <h4>Mobile Application Projects on Expo</h4>
                         <p>
                         <ul>
