--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="/img/IMG_0076.JPEG">
                     <h1 id="resume-name">Samuel Egwurube</h1>
                     <span class:"strong">Project Code: <a class="links" href="https://github.com/Sammy0807/" target="_blank">https://github.com/Sammy0807/</a></span>
-                    <a href="/download/resume.pdf" target="_blank" class="btn btn_download">Download Resume</a>
+                    <a href="/download/SAMUEL EGWURUBE RESUME.doc" target="_blank" class="btn btn_download">Download Resume</a>
                 </div>
                 <hr id="resume-hr">
                 <div class="content content1">
