--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
     
                 <li>
                     <i class="fab fa-angular fa-4x"></i>
-                    <h4>Fullstack MEAN User Authentication App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://pacific-dusk-16017.herokuapp.com/" target="_blank"> Get Authenticated!/</a>
-                    <p>This project was developed to serve as a boiler plate to save time when I choose to start a new angular project.
-                        built with Angular 8, it sits on a node and express server with a MongoDB cluster in mlab. The UI is designed with bootswatch
-                        Cerulean theme, it demonstrates my knowledge of Angular router, state management and the use of MVC architecture to display
-                        a SPA (single page application) design, among others. This application is hosted on heroku.
+                    <h4>Email Sender App</h4>
+                    <span class="strong">Project Link:</span><a class="links" href="https://limitless-sierra-84451.herokuapp.com/" target="_blank"> Send Email!/</a>
+                    <p>
+                        I call this App Emaily, it basically allows you to send a single message as an email to as many email-ID's as you want
                     </p>
                 </li>
 
