--- a/index.html
+++ b/index.html
@@ -83,11 +83,15 @@
                 </li>
     
                 <li>
-                    <i class="fab fa-angular fa-4x"></i>
+                    <i class="fab fa-react fa-4x"></i>
                     <h4>Email Sender App</h4>
-                    <span class="strong">Project Link:</span><a class="links" href="https://limitless-sierra-84451.herokuapp.com/" target="_blank"> Send Email!/</a>
+                    <span class="strong">Project Link:</span><a class="links" href="https://limitless-sierra-84451.herokuapp.com/" target="_blank"> Send Email!</a>
                     <p>
-                        I call this App Emaily, it basically allows you to send a single message as an email to as many email-ID's as you want
+                        I call this App Emaily, it basically allows you to send a single message as an email to as many email-ID's as you want. The message will contain a "YES"
+                        and "NO" link at the bottom, so its preferably used to collect user feed back. When a message is sent out, it appears as an element on your dashboard, and you're
+                        able to see the number count of yes and no's. The app uses strip to accept payment (because it is in demo mode, you can use 4242 4242 4242 4242 as card number), used
+                        google oauth for authentication. This is a full stack application built in the JavaScript ecosystem. Node and express server with MongoDB as a database, then I used
+                        React to develop the User Interface.
                     </p>
                 </li>
 
