--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p>
                         I call this App Emaily, it basically allows you to send a single message as an email to as many email-ID's as you want. The message will contain a "YES"
                         and "NO" link at the bottom, so its preferably used to collect user feed back. When a message is sent out, it appears as an element on your dashboard, and you're
-                        able to see the number count of yes and no's. The app uses strip to accept payment (because it is in demo mode, you can use 4242 4242 4242 4242 as card number), used
+                        able to see the number count of yes and no's responses. The app uses strip to accept payment (because it is in demo mode, you can use 4242 4242 4242 4242 as card number), used
                         google oauth for authentication. This is a full stack application built in the JavaScript ecosystem. Node and express server with MongoDB as a database, then I used
                         React to develop the User Interface.
                     </p>
